--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="" />
     <meta name="keywords" content="PROIEL corpus treebank Latin Greek download" />
-    <link rel="stylesheet" type="text/css" href="css/kickstart.css" media="all" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" media="all" />
-    <link rel="stylesheet" type="text/css" href="css/colors.css">
+    <link rel="stylesheet" type="text/css" href="/css/kickstart.css" media="all" />
+    <link rel="stylesheet" type="text/css" href="/css/style.css" media="all" />
+    <link rel="stylesheet" type="text/css" href="/css/colors.css">
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
