--- a/_sass/bulma/base/generic.sass
+++ b/_sass/bulma/base/generic.sass
@@ -1,5 +1,5 @@
 html
-  background: $body-background
+  background-color: $body-background
   font-size: $size-normal
   -moz-osx-font-smoothing: grayscale
   -webkit-font-smoothing: antialiased
@@ -48,7 +48,7 @@ a
     color: $link-hover
 
 code
-  background: $code-background
+  background-color: $code-background
   color: $code
   font-size: 12px
   font-weight: normal
@@ -56,7 +56,7 @@ code
 
 hr
   border-top-color: $border
-  margin: 20px 0
+  margin: 40px 0
 
 img
   max-width: 100%
@@ -79,12 +79,12 @@ strong
 // Block
 
 pre
-  background: $pre-background
+  background-color: $pre-background
   color: $pre
   white-space: pre
   word-wrap: normal
   code
-    background: $pre-background
+    background-color: $pre-background
     color: $pre
     display: block
     overflow-x: auto
