--- a/_sass/bulma/components/media.sass
+++ b/_sass/bulma/components/media.sass
@@ -1,5 +1,5 @@
 .media-number
-  background: $background
+  background-color: $background
   border-radius: 290486px
   display: inline-block
   font-size: $size-medium
@@ -22,7 +22,7 @@
   margin-left: 10px
 
 .media-content
-  flex: 1
+  flex-grow: 1
   text-align: left
 
 .media
