--- a/_sass/bulma/components/nav.sass
+++ b/_sass/bulma/components/nav.sass
@@ -52,7 +52,7 @@ a.nav-item
 .nav-menu
   // Responsiveness
   +mobile
-    background: $white
+    background-color: $white
     box-shadow: 0 4px 7px rgba($black, 0.1)
     left: 0
     display: none
@@ -64,11 +64,14 @@ a.nav-item
       padding: 10px
     &.is-active
       display: block
+  +tablet-only
+    padding-right: 20px
 
 .nav-left
   align-items: stretch
   display: flex
-  flex: 1
+  flex-basis: 0
+  flex-grow: 1
   justify-content: flex-start
   overflow: hidden
   overflow-x: auto
@@ -78,20 +81,23 @@ a.nav-item
   align-items: stretch
   display: flex
   justify-content: center
+  margin-left: auto
+  margin-right: auto
 
 .nav-right
   // Responsiveness
   +tablet
     align-items: stretch
     display: flex
-    flex: 1
+    flex-basis: 0
+    flex-grow: 1
     justify-content: flex-end
 
 // Main container
 
 .nav
   align-items: stretch
-  background: $white
+  background-color: $white
   display: flex
   min-height: $nav-height
   position: relative
@@ -118,3 +124,10 @@ a.nav-item
   // Modifiers
   &.has-shadow
     box-shadow: 0 2px 3px rgba($black, 0.1)
+  // Responsiveness
+  +touch
+    & > .container,
+    .container > &
+      & > .nav-left
+        & > .nav-item.is-brand:first-child
+          padding-left: 20px
