--- a/_sass/bulma/components/tabs.sass
+++ b/_sass/bulma/components/tabs.sass
@@ -30,7 +30,7 @@
     align-items: center
     border-bottom: 1px solid $border
     display: flex
-    flex: 1
+    flex-grow: 1
     justify-content: flex-start
     &.is-left
       padding-right: 10px
@@ -62,17 +62,17 @@
       padding-bottom: 5px
       padding-top: 5px
       &:hover
-        background: $background
+        background-color: $background
         border-bottom-color: $border
     li
       &.is-active
         a
-          background: $white
+          background-color: $white
           border-color: $border
           border-bottom-color: transparent !important
   &.is-fullwidth
     li
-      flex: 1
+      flex-grow: 1
   &.is-toggle
     a
       border: 1px solid $border
@@ -81,7 +81,7 @@
       padding-top: 5px
       position: relative
       &:hover
-        background: $background
+        background-color: $background
         border-color: $border-hover
         z-index: 2
     li
@@ -93,7 +93,7 @@
         border-radius: 0 $radius $radius 0
       &.is-active
         a
-          background: $primary
+          background-color: $primary
           border-color: $primary
           color: $primary-invert
           z-index: 1
