handbook: move incompleteness warning to layout

--- a/_layouts/handbook.html
+++ b/_layouts/handbook.html
@@ -31,6 +31,11 @@
 
       <section class="section">
         <div class="container">
+          <div class="notification is-danger">
+            <button class="delete"></button>
+            As of August 2016, this document is an evolving draft. All information here is correct and up to date but remains very incomplete.
+          </div>
+
           {{ content }}
         </div>
       </section>
