Adjust handbook style header sizes

--- a/css/handbook.sass
+++ b/css/handbook.sass
@@ -15,6 +15,12 @@ $size-7: 13px
 
 @import "_bulma"
 
+.content
+  h1
+    font-size: 1.6em
+  h2
+    font-size: 1.2em
+
 table
   background: $white
   color: $text-strong
