--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,8 @@
     <title>The PROIEL Treebank of Indo-European Languages</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="description" content="" />
-    <meta name="keywords" content="PROIEL corpus treebank Latin Greek download" />
+    <meta name="description" content="The PROIEL Treebank is a corpus of Latin, Ancient Greek and other Indo-European languages with full morphological and syntactic annotation" />
+    <meta name="keywords" content="Latin treebank,Ancient Greek treebank" />
     <link rel="stylesheet" type="text/css" href="/css/kickstart.css" media="all" />
     <link rel="stylesheet" type="text/css" href="/css/style.css" media="all" />
     <link rel="stylesheet" type="text/css" href="/css/colors.css">
