--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,16 @@
-<!DOCTYPE html>
 <html>
   <head>
-    <title>The PROIEL Treebank of Indo-European Languages</title>
+    <title>The PROIEL Treebank: A treebank of Latin, Ancient Greek and ancient Indo-European Languages</title>
+
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="description" content="The PROIEL Treebank is a corpus of Latin, Ancient Greek and other Indo-European languages with full morphological and syntactic annotation" />
-    <meta name="keywords" content="Latin treebank,Ancient Greek treebank" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The PROIEL Treebank is a corpus of Latin, Ancient Greek and other Indo-European languages with full morphological and syntactic annotation">
+    <meta name="keywords" content="Latin treebank,Ancient Greek treebank">
+
     <link rel="stylesheet" type="text/css" href="/css/kickstart.css" media="all" />
     <link rel="stylesheet" type="text/css" href="/css/style.css" media="all" />
     <link rel="stylesheet" type="text/css" href="/css/colors.css">
+
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
