--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,10 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The PROIEL Treebank is a corpus of Latin, Ancient Greek and other Indo-European languages with full morphological and syntactic annotation">
     <meta name="keywords" content="Latin treebank,Ancient Greek treebank">
-
-    <link rel="stylesheet" type="text/css" href="/css/kickstart.css" media="all" />
-    <link rel="stylesheet" type="text/css" href="/css/style.css" media="all" />
-    <link rel="stylesheet" type="text/css" href="/css/colors.css">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/milligram.css">
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -22,18 +20,24 @@
     </script>
   </head>
   <body>
-    <div class="grid">
-      <div class="col_12" style="margin-top:100px;">
-        <header>
-          <h1 class="maroon">The PROIEL Treebank</h1>
-        </header>
-
-        {{ content }}
-
+    <header>
+      <div class="container">
+        <h2 class="title">The PROIEL Treebank</h2>
       </div>
-    </div>
+    </header>
 
-    <div id="footer">
-    </div>
+    <section class="section">
+      <div class="container">
+        {{ content }}
+      </div>
+    </section>
+
+    <hr>
+
+    <footer class="footer">
+      <div class="container" style="text-align: center">
+        This website is maintained by <a href="http://johndal.com/">Marius L Jøhndal</a>. The content of this website is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>.
+      </div>
+    </footer>
   </body>
 </html>
