http -> https wherever possible

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
 
     <footer class="footer">
       <div class="container" style="text-align: center">
-        This website is maintained by <a href="http://johndal.com/">Marius L Jøhndal</a>. The content of this website is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>.
+        This website is maintained by <a href="http://johndal.com/">Marius L Jøhndal</a>. The content of this website is licensed <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>.
       </div>
     </footer>
   </body>
